# dddmr_navigation

./: CLAUDE.md  justfile
dddmr_docker/: README.md  compose.laptop.localization.yaml  compose.laptop.mapping.yaml  compose.laptop.yaml  compose.robot.localization.yaml  compose.robot.mapping.yaml  compose.robot.yaml  run_demo.bash
dddmr_docker/config/: cyclonedds_laptop.xml  cyclonedds_robot.xml  net_laptop.env  net_robot.env
dddmr_docker/docker_file/: Dockerfile_x64  Dockerfile_x64_l4t_r36  build.bash  run_x64_gpu.bash
docs/: navigation_docker_plan.md
src/dddmr_beginner_guide/: README.md
src/dddmr_global_planner/: CMakeLists.txt  README.md
src/dddmr_lego_loam/: README.md
src/dddmr_lego_loam/cloud_msgs/: CMakeLists.txt
src/dddmr_lego_loam/lego_loam_bor/: CMakeLists.txt  package.xml
src/dddmr_local_planner/: README.md
src/dddmr_local_planner/base_trajectory/: CMakeLists.txt  package.xml
src/dddmr_local_planner/local_planner/: CMakeLists.txt  package.xml
src/dddmr_local_planner/mpc_critics/: CMakeLists.txt  package.xml
src/dddmr_local_planner/recovery_behaviors/: CMakeLists.txt  package.xml
src/dddmr_local_planner/trajectory_generators/: CMakeLists.txt  package.xml
src/dddmr_mcl_3dl/: CMakeLists.txt  README.md
src/dddmr_odom_3d/: CMakeLists.txt  README.md
src/dddmr_p2p_move_base/: CMakeLists.txt  README.md  package.xml
src/dddmr_p2p_move_base/config/: p2p_move_base_localization_os1.yaml  p2p_move_base_mapping_os1.yaml
src/dddmr_p2p_move_base/launch/: p2p_move_base_localization_headless.launch  p2p_move_base_mapping_headless.launch
src/dddmr_perception_3d/: CMakeLists.txt  README.md
src/dddmr_perception_3d/plugins/: multilayer_spinning_lidar.cpp
src/dddmr_perception_3d/utils/: depthimg2pointcloud_node.cpp
src/dddmr_rviz_tools/dddmr_rviz_default_plugins/: CMakeLists.txt  package.xml
src/dddmr_rviz_tools/map_editor_panel/: CMakeLists.txt  package.xml
src/dddmr_rviz_tools/mapping_panel/: CMakeLists.txt  package.xml
src/dddmr_rviz_tools/pose_graph_editor_panel/: CMakeLists.txt  package.xml
src/dddmr_rviz_tools/pose_graph_merge_editor_panel/: CMakeLists.txt  package.xml
src/dddmr_semantic_segmentation/: CMakeLists.txt  README.md
src/dddmr_semantic_segmentation/include/: semantic_segmentation2point_cloud.h
src/dddmr_sys_core/: CMakeLists.txt
src/dddmr_trt/: CMakeLists.txt
(+17 files in other folders)
