<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dddmr_rviz_default_plugins</name>
  <version>0.0.0</version>
  <description>
    DDDMR rviz plugin for 3D initial pose and 3D goal pose
  </description>
  <maintainer email="yan_1whun1@hotmail.com">Apola</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/ros2/rviz/blob/ros2/README.md</url>
  <url type="repository">https://github.com/ros2/rviz</url>
  <url type="bugtracker">https://github.com/ros2/rviz/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qt6-base-dev</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>

  <build_export_depend>rviz_ogre_vendor</build_export_depend>

  <exec_depend>libqt6core6</exec_depend>
  <exec_depend>libqt6gui6</exec_depend>
  <exec_depend>libqt6opengl6</exec_depend>
  <exec_depend>libqt6widgets6</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>gz_math_vendor</depend>
  <depend>image_transport</depend>
  <depend>interactive_markers</depend>
  <depend>laser_geometry</depend>
  <depend>nav_msgs</depend>
  <depend>map_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>resource_retriever</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>rviz_rendering_tests</test_depend>
  <test_depend>rviz_visual_testing_framework</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
